--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 							<div class="col-sm-7 vertical-center padding-fix">
 								<h1>Designer<sup>+</sup> Developer<sup>+</sup> Thinker<sup>+</sup> </h1>
 								<p>Hello, I’m Sorin Jianu. I Have 10 years of experience in IT Support. I am worked on a variety of tehnology and now I follow my dream and try to code beautiful and responsive websites.</p>
-								<p class="button-row"><a href="https://www.freelancer.com/u/Nirosinlove?w=f" class="button solid-button white">Hire Me Now</a><a href="cv/cv.pdf" class="button solid-button purple">Download CV</a></p>
+								<p class="button-row"><a href="https://www.freelancer.com/u/Nirosinlove?w=f" class="button solid-button white">Hire Me Now</a><a href="cv.pdf" class="button solid-button purple">Download CV</a></p>
 							</div> <!-- end .col-sm-7 -->
 							<div class="col-sm-5 vertical-center">
 								<img src="images/7.png" alt="man" class="img-responsive section-img">
